# tokdu

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tokdu.py
.github/workflows/: release.yml
src/tokdu/: __init__.py  config.py  tokdu.py
