[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "tokdu"
version = "0.1.1"
description = "A token counting TUI tool that respects .gitignore and skips binary files"
readme = "README.md"
authors = [
  { name = "Halil Tezcan KARABULUT", email = "unitythemaker@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["tiktoken==0.9.0", "pathspec==0.12.1"]

[project.urls]
Homepage = "https://github.com/unitythemaker/tokdu"

[project.scripts]
tokdu = "tokdu:main"
